tests/tests/Other_tests/tests-Init-07-Sub-07-05_Sub_WrongUseOfSub/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:13: error: expected ‘,’ or ‘;’ before ‘b’
  int c = a--b;
             ^

return code: 1
